<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.healths.ui.home.HomeFragment"
        android:label="@string/MY"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.healths.ui.gallery.GalleryFragment"
        android:label="@string/DIS"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_med"
        android:name="com.example.healths.ui.Medicine.MedicineFragment"
        android:label="@string/Med"
        tools:layout="@layout/fragment_medicine"
        />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.healths.ui.LOGOUTAPP.Fragment_LOGOUT"
        android:label="@string/LOG"
        tools:layout="@layout/fragment__logout" />

    <fragment

        android:id="@+id/nav_his"

        android:name="com.example.healths.ui.HISTORY.HistoryFragment"
        android:label="@string/HIS"
        tools:layout="@layout/history_fragment"

        />
</navigation>